@@ -4,6 +4,8 @@
 * Lib: New functions (btc.Tx).ContainsOrdFile() and btc.ExtractOrdFile() - for files stored in txs, as per github.com/casey/ord
 * Tools/bdb - new command "-ord" to extract above mentioned files from the blockchain
 * Client/WebUI: The fees chart for an already mined block shows the cross with reference to x and y axis
+* Client/WebUI/Home: Fixed blocks SPB values on the chart, as the ones showed previously were not accurate
+* Client/WebUI/Home: Added blocks Weight chart
 
 1.10.2 - 2022-09-06:
 * Client: New config value "Memory.CompressBlockDB" (default true)
